<resources>
    <string name="pull_to_refresh_pull_label">下拉可以刷新</string>
    <string name="pull_to_refresh_release_label">释放立即刷新</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新…</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="app_name">余盆</string>
    <string name="app_namenn">余盆</string>
    <string name="gesture_drawUnlock">绘制解锁图案</string>
    <string name="lockpattern_recording_intro_header">"绘制解锁图案"</string>
    <string name="lockpattern_settings_help_how_to_record">"演示如何绘制解锁图案"</string>
    <string name="lockpattern_pattern_entered_header">"图案已记录"</string>
    <string name="lockpattern_need_to_confirm">"请再次绘制解锁图案"</string>
    <string name="lockpattern_need_to_unlock_wrong">"与上次输入不一致，请重试"</string>
    <string name="lockpattern_pattern_confirmed_header">"确认保存新解锁图案"</string>
    <string name="lockpattern_recording_inprogress">"完成后松开手指"</string>
    <string name="gesture_password_guide_text">请创建一个锁定用户的手势密码，方便以后登录。</string>
    <string name="gesture_password_guide_creat_btn">创建手势密码</string>
    <string name="gesture_drawPwd">请绘制手势密码\n(输入错误可更换用户.)</string>
    <string name="gesturepwd_unlock">3次失败后，需要重新登录。</string>
    <string name="gesture_save">保存</string>
    <string name="gesture_Redraw">重绘</string>
    <string name="toastSetPedSucces">密码设置成功</string>
    <string name="toastLogin">登录</string>
    <string name="toastUnlock">解锁成功</string>
    <string name="toastlock">您已3次输错密码，再试1次到登录界面。</string>
    <string name="jihuanjianjie">计划简介:</string>
    <string name="product_features">产品特点:</string>
    <string name="investment_target">投资目标:</string>
    <string name="investment">投资</string>
    <string name="investment_success">投资成功</string>
    <string name="lending_way">特色出借方式:</string>
    <string name="fixed_period">固定期限:</string>
    <string name="yuxinbao">余 信 宝:</string>
    <string name="yufangbao">余 房 宝:</string>
    <string name="yuchebao">余 车 宝:</string>
    <string name="yuxinbao2">余信宝</string>
    <string name="yufangbao2">余房宝</string>
    <string name="yuchebao2">余车宝</string>
    <string name="yue">可用余额:</string>
    <string name="yue3">余额</string>
    <string name="yue2">可用余额(元)</string>
    <string name="Currentincome">当前收益:</string>
    <string name="Currentincome2">当前收益(元)</string>
    <string name="str_action_settings">设置</string>
    <string name="str_app_name_title">余盆</string>
    <string name="home_name_title">首页</string>
    <string name="str_my_asset">我的财富</string>
    <string name="str_asset_center">财富中心</string>
    <string name="str_asset_center_details">财富详情</string>
    <string name="transfer_record_details">转让中</string>
    <string name="str_yp_crowd">余盆众筹</string>
    <string name="str_more">更多</string>
    <string name="str_title_activity_my_financial">我的资产</string>
    <string name="str_exitLogOff">退出登录</string>
    <string name="str_exitApp">确定要退出余盆软件吗</string>
    <string name="str_cus_manager_is_lose">客户经理已不存在，请重新选择</string>
    <string name="str_areYouLogoff">确定要退出？</string>
    <string name="pay_mothod">支付方式</string>
    <string name="investment_money">投资金额：</string>
    <string name="investment_money2">投资金额(元)</string>
    <string name="investment_money3">投资金额</string>
    <string name="use_red">使用红包奖券：</string>
    <string name="str_waiting">请您稍等</string>
    <string name="str_back">返回</string>
    <string name="str_login">登录</string>
    <string name="str_aboutapp">关于余盆</string>
    <string name="str_helper_customer">帮助中心</string>
    <string name="str_message_push">消息推送</string>
    <string name="str_concern_us">关注我们</string>
    <string name="str_picture2d_id">二维码名片</string>
    <string name="str_helper_app">意见反馈</string>
    <string name="str_sys_notifier">系统通知</string>
    <string name="str_urge_yqs">给予鼓励</string>
    <string name="str_share2other">转发分享</string>
    <string name="str_lottery_recard">抽奖信息</string>
    <string name="str_guanzhu">关注我们</string>
    <string name="sign">签到</string>
    <string name="str_update_yqs">检查更新</string>
    <string name="str_my_account">我的账户</string>
    <string name="str_customer_manager">我的客户经理</string>
    <string name="str_count_money">总资产</string>
    <string name="str_count_money2">总投资额(元)</string>
    <string name="investment_quota">投资额度:</string>
    <string name="str_modify_pass">修改密码</string>
    <string name="str_set_login_pass">修改登录密码</string>
    <string name="str_set_invest_pass">设置交易密码</string>
    <string name="str_open_gesture_pass">开启手势密码</string>
    <string name="str_modify_gesture_pass">修改手势密码</string>
    <string name="str_modify_gesture_code">我的二维码</string>
    <string name="join_condition">加入条件:</string>
    <string name="income_approach">收益方式:</string>
    <string name="term_and_return">出售期限及收益:</string>
    <string name="str_cus_server_phone">客服电话</string>
    <string name="str_app_server_phone">400-838-9595</string>
    <string name="str_cus_qq">客服QQ</string>
    <string name="str_app_con_qq">56124236</string>
    <string name="str_input_calc">收益计算</string>
    <string name="str_apply_redeem">申购与赎回时间</string>
    <string name="str_secrict_safe">安全保障</string>
    <string name="str_support_bank">支持哪家银行</string>
    <string name="str_holiday_input">节假日是否有收益</string>
    <string name="str_input_deal_pass">请输入交易密码</string>
    <string name="str_dream_year_input">预期年化收益</string>
    <string name="str_more_helpr_phone">400-838-9595</string>
    <string name="str_server_time">服务时间：9：00~18：00</string>
    <string name="str_sms">短信</string>
    <string name="str_weixin_haoyou">微信好友</string>
    <string name="str_weixin_attention">关注微信</string>
    <string name="str_weixin_pengyouquan">微信朋友圈</string>
    <string name="str_tencent_attention">关注腾讯微博</string>
    <string name="str_xinlang_weibo">新浪微博</string>
    <string name="str_xinlang_weibo_attention">关注新浪微博</string>
    <string name="str_qq_kongjian">QQ空间</string>
    <string name="str_email">邮件</string>
    <string name="str_qq">QQ</string>
    <string name="str_tenxun_weibo">腾讯微博</string>
    <string name="str_logoff_promit">您确定要退出登录？\n确定退出下次需要重新登陆</string>
    <string name="str_percent">%</string>
    <string name="str_dot">.</string>
    <string name="str_share_to">分享到</string>
    <string name="str_attentionour">关注我们</string>
    <string name="str_goumai">购买</string>
    <string name="cancel_transfer">取消转让</string>
    <string name="Application_for_transfer">申请转让</string>
    <string name="str_chongzhi">重置</string>
    <string name="str_mini_price">起投金额1000元</string>
    <string name="str_not_login">您还未登录，请您登陆</string>
    <string name="zezq">转让专区</string>
    <string name="nation">民族</string>
    <string name="str_not_register">您还没有注册，请您注册</string>
    <string name="str_not_deal_pass">您没有设置交易密码</string>
<string name="Total_transfer_amount">转让总金额:</string>
    <string name="qq_login_success">QQ登录成功</string>
    <string name="qq_login_fail">QQ登录失败</string>
    <string name="qq_login_cancel">QQ登录取消</string>
    <string name="str_yes">是</string>
    <string name="str_no">否</string>
    <string name="str_set_password">设置密码</string>
    <string name="str_input_password">\u0020请输入您的密码</string>
    <string name="str_input_second_yout_pass">\u0020请再次输入您的密码</string>
    <string name="str_input_pass_error">输入密码不正确</string>
    <string name="str_register_fial">注册失败</string>
    <string name="str_phoneNum">手机号</string>
    <string name="str_forget_password">忘记密码</string>
    <string name="str_set_deal_pass">设置交易密码</string>
    <string name="str_confirm">确  定</string>
    <string name="str_tijiao">提  交</string>
    <string name="str_register">注册</string>
    <string name="str_forget">发送短信验证码</string>
    <string name="str_purcase_product">购买</string>
    <string name="str_newpurcase"></string>
    <string name="dosage">已投金额</string>
    <string name="zrje">转让金额</string>
    <string name="str_is_new_version">当前已是最新版本：v</string>
    <string name="str_find_new_version">发现新版本</string>
    <string name="str_curr_income">当前预期收益(元):</string>
    <string name="expectedReturn">预期收益</string>
    <string name="fee">手续费</string>
    <string name="wdqsy">未到期收益</string>
    <string name="due_time">到期时间:</string>
    <string name="expectedReturn2">预期收益(元)</string>
    <string name="str_no_have">无</string>
    <string name="str_have">有</string>
    <string name="str_name">姓名</string>
    <string name="str_name2">姓名  :</string>
    <string name="str_colon">:</string>
    <string name="str_jiekuan">借款</string>
    <string name="Borrowing_information">借款信息</string>
    <string name="Loan_description">借款说明</string>
    <string name="str_jiekuan2">借款 :</string>
    <string name="str_next_step">完成</string>
    <string name="str_comfirm_invest">确定购买</string>
    <string name="str_send">发送</string>
    <string name="str_borrowe_title">借款人</string>
    <string name="str_borrowe_info">借款人信息</string>
    <string name="str_borrowe_list">借款人</string>
    <string name="str_cycle_borrower_list">本月循环出借</string>
    <string name="str_dianzi_contract">电子合同</string>
    <string name="str_colom">:</string>
    <string name="str_bind_bank">绑定银行卡</string>
    <string name="str_bank_card">银行卡号</string>
    <string name="str_card_num">卡号</string>
    <string name="str_bank">银行</string>
    <string name="str_identity_valitor">身份认证</string>
    <string name="str_bank_card_manager">银行卡管理</string>
    <string name="str_promit_input_gs_pass">请输入手势密码</string>
    <string name="str_sy_date">剩余：</string>
    <string name="str_sy_date2">剩余</string>
    <string name="ysy">已收益</string>
    <string name="residual_maturity">剩余期限:</string>
    <string name="Date_of_interest">起息日期:</string>
    <string name="sy_day">剩余天数</string>
    <string name="residual_amount">可投金额</string>
    <string name="zrsy">转让收益</string>
    <string name="manbiao_info">满标起息:</string>
    <string name="residual_fraction">剩余份额:</string>
    <string name="drop_down_list_header_default_text">Click to refresh&#8230;</string>
    <string name="drop_down_list_header_pull_text">Drop Down to refresh&#8230;</string>
    <string name="drop_down_list_header_release_text">Release to refresh&#8230;</string>
    <string name="drop_down_list_header_loading_text">Loading&#8230;</string>
    <string name="drop_down_list_footer_default_text">More</string>
    <string name="drop_down_list_footer_loading_text">Loading&#8230;</string>
    <string name="drop_down_list_footer_no_more_text">No More</string>
    <string name="image_content">Image</string>
    <string name="str_yuan">元</string>
    <string name="str_day">天</string>
    <string-array name="banks">
        <item>请选择银行</item>
        <item>中国银行</item>
        <item>中国民生银行</item>
        <item>中国工商银行</item>
        <item>中国农业银行</item>
    </string-array>
    <string name="str_read_app_protical">已阅读并同意</string>
    <string name="str_app_protical">《余盆用户使用协议》</string>
    <string name="str_app_soft_use_protical">《注册服务协议》</string>
    <string name="str_recharge">充值</string>
    <string name="cancel">取消</string>
    <string name="update_money">修改投资金额</string>
    <string name="balance_hiht">余额不足</string>
    <string name="look_detail">查看详情</string>
    <string name="buy_again">继续投资</string>
    <string name="view_contract">查看合同</string>
    <string name="investor">投资人</string>
    <string name="starting_date">起投日期</string>
    <string name="contract_number">合同单号</string>
    <string name="product_name">产品名称</string>
    <string name="investment_amount">投资金额</string>
    <string name="confirm">确认</string>
    <string name="str_prompt">提示</string>
    <string name="are_you_exit_app">你确定要退出应用吗?</string>
    <string name="calculation_method2">计息方式</string>
    <string name="yp_home">首页</string>
    <string name="home_date">投资期限 </string>
</resources>