<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:layout_gravity="center">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/white"
        android:minWidth="200dp"
        android:orientation="vertical"
        android:scrollbars="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/str_prompt"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:minHeight="40dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/are_you_exit_app"
                android:textColor="@android:color/black"
                android:textSize="18sp" />


            <com.huaop2p.yqs.module.base.view.ClearEditText
                android:id="@+id/edittext"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:maxLength="20"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                style="@style/clear_edit_com_style" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:alpha="0.5"
            android:background="#D1D1D1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="30dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/dialog_left_btn_select"
                android:text="@string/cancel"
                android:textSize="20sp"
                android:textColor="@color/btntextcolor" />

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:alpha="0.5"
                android:background="#D1D1D1" />

            <Button
                android:id="@+id/confirm_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/dialog_right_btn_select"
                android:text="@string/confirm"
                android:textSize="20sp"
                android:textColor="@color/btntextcolor" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>