<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/listview_driver_color"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_title_height"
        android:background="@color/white"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_head_image"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/vpi__tab_unselected_holo"
            android:gravity="center|left">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/right_image_height"
                android:layout_marginLeft="@dimen/base_line_padding"
                android:onClick="back"
                android:src="@drawable/back" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/vpi__tab_unselected_holo"
            android:gravity="center">

            <TextView
                android:id="@+id/TXT_APP_TITLE"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:ellipsize="end"
                android:gravity="center"
                android:text="@string/investment_success"
                android:textColor="@color/black"
                android:textSize="@dimen/small_title_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/vpi__tab_unselected_holo"
            android:gravity="center|right"></LinearLayout>
    </LinearLayout>

    <com.huaop2p.yqs.widget.ReboundScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_success"
                android:layout_width="wrap_content"
                android:background="@drawable/end"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/base_line_padding"
                android:visibility="invisible"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/px40"
                android:layout_marginRight="@dimen/px40"
                android:layout_marginBottom="@dimen/base_line_padding"
                android:background="@drawable/rounded_rectangle_white"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/vpi__tab_unselected_holo"
                    android:padding="@dimen/base_line_padding">

                    <TextView
                        android:id="@+id/tv_DDH"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contract_number"
                        android:textColor="@color/textcolor2" />

                    <TextView
                        android:layout_toRightOf="@+id/tv_DDH"
                        android:id="@+id/tv_orderNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:gravity="right"
                        android:textColor="@color/textcolor" />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/vpi__tab_unselected_holo"
                    android:padding="@dimen/base_line_padding">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product_name"
                        android:textColor="@color/textcolor2" />

                    <TextView
                        android:id="@+id/tv_productName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:textColor="@color/textcolor" />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/vpi__tab_unselected_holo"
                    android:padding="@dimen/base_line_padding">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/investor"
                        android:textColor="@color/textcolor2" />

                    <TextView
                        android:id="@+id/tv_investor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:textColor="@color/textcolor" />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/vpi__tab_unselected_holo"
                    android:padding="@dimen/base_line_padding">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/investment_amount"
                        android:textColor="@color/textcolor2" />

                    <TextView
                        android:id="@+id/tv_investorMoney"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:textColor="@color/textcolor" />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/vpi__tab_unselected_holo"
                    android:padding="@dimen/base_line_padding">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/starting_date"
                        android:textColor="@color/textcolor2" />

                    <TextView
                        android:id="@+id/tv_startTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:textColor="@color/textcolor" />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/vpi__tab_unselected_holo"
                    android:padding="@dimen/base_line_padding">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/calculation_method2"
                        android:textColor="@color/textcolor2" />

                    <TextView
                        android:id="@+id/tv_jixiWay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:textColor="@color/textcolor" />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/vpi__tab_unselected_holo"
                    android:padding="@dimen/base_line_padding">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_date"
                        android:textColor="@color/textcolor2" />

                    <TextView
                        android:id="@+id/tv_investorDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:textColor="@color/textcolor" />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/vpi__tab_unselected_holo"
                    android:padding="@dimen/base_line_padding">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="使用红包奖券"
                        android:textColor="@color/textcolor2" />

                    <TextView
                        android:id="@+id/tv_use_red"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:textColor="@color/textcolor" />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/base_line_padding">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/expectedReturn"
                        android:textColor="@color/textcolor2" />

                    <TextView
                        android:id="@+id/tv_expectedReturn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:textColor="@color/textcolor" />
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/base_line_padding"
                android:layout_marginRight="@dimen/base_line_padding"
                android:layout_marginTop="@dimen/px5"
                >
                <Button
                    android:id="@+id/btn_look_details"
                    android:layout_width="0dip"
                    android:layout_height="@dimen/dashed_height"
                    android:layout_weight="2"
                    android:text="@string/look_detail"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp18"
                    android:layout_marginRight="@dimen/base_line_padding"
                    android:background="@drawable/rounded_rectangle_yellow"
                    />
                <Button
                    android:id="@+id/btn_Look_Contract"
                    android:layout_width="0dip"
                    android:layout_height="@dimen/dashed_height"
                    android:layout_weight="2"
                    android:text="@string/view_contract"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp18"
                    android:layout_marginRight="@dimen/base_line_padding"
                    android:background="@drawable/rounded_rectangle_yellow"
                    />
                <Button
                    android:id="@+id/btn_again_buy"
                    android:layout_width="0dip"
                    android:layout_height="@dimen/dashed_height"
                    android:layout_weight="3"
                    android:text="@string/buy_again"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp18"
                    android:background="@drawable/rounded_rectangle_red"
                    />
            </LinearLayout>
        </LinearLayout>
    </com.huaop2p.yqs.widget.ReboundScrollView>
</LinearLayout>
